<resources>

    <string name="app_name">LocationAlarm</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Location Alarm</string>
    <string name="long_lat">Longitude: 0\n Latitude: 0</string>
    <string name="adjust_map">Scroll map</string>
    <string name="select_destination">Select Destination from map</string>
    <string name="clear_destination">Clear Destination</string>
    <string name="select_radius">Select radius:</string>
    <string name="title_activity_alarm_details">Alarm Details:</string>
    <string name="length_unit_km">km</string>
    <string name="ok">OK</string>
    <string name="insert_radius">Insert Radius!</string>
    <string name="ticker_text">Location Alarm</string>
    <string name="notification_title">Remaining distance</string>
    <string name="unknown">Unknown</string>
    <string name="stopped">Location alarm has stopped!</string>
    <string name="alarm_started">Alarm is on</string>
    <string name="no_signal">You haven\'t received location updates for selected time!</string>
    <string name="select_time_without_update">Select after how long time without location update alarm will show up:</string>
    <string name="time_minutes">min</string>
    <string name="insert_time">Insert Time!</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="radius">Radius</string>
    <string name="my_location">My location</string>
    <string name="destination">Destination</string>
    <string name="alarm_text">You have reached your destination</string>
    <string name="network_update">Network update</string>
    <string name="gps_update">Gps update</string>
    <string name="init_update">Initial update</string>
    <string name="low_battery">Your battery level is low. Maybe You should consider turning off the alarm.</string>
    <string name="noNetworkProvider">Turn on Network/Google localization services in settings in order to save some
        battery life
    </string>
    <string name="noGpsProvider">Turn on GPS localization services in settings in order to increase localization accuracy</string>
    <string name="add_to_favorites_text">If You want this destination to be one of your favorites, insert a name for it:</string>
    <string name="favorites">Favorites</string>
    <string name="delete">Delete</string>
    <string name="destination_deleted">Favorite destination was deleted</string>
    <string name="destination_added">Favorite destination was added</string>
    <string name="select_destination_from_favorites">Select destination from favorites:</string>
</resources>